fixing close icon sidebar on small devices

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -248,20 +248,21 @@ hr {
     box-shadow: 1px 1px 5px #3b3b3b !important;
   }
 
-  .sidebar {
+  .sidebar-list {
     overflow-y: auto;
+    display:grid;
   }
 
-  .sidebar::-webkit-scrollbar {
+  .sidebar-list::-webkit-scrollbar {
     width: 6px;
   }
 
-  .sidebar::-webkit-scrollbar-thumb {
+  .sidebar-list::-webkit-scrollbar-thumb {
     background: var(--main-color);
     border-radius: 2.5px;
   }
 
-  .sidebar::-webkit-scrollbar-thumb:hover {
+  .sidebar-list::-webkit-scrollbar-thumb:hover {
     background: var(--main-color);
   }
 }
